# relic

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  RELIC.md
.agents/: README.md  dispatch.ps1  verify.ps1
.claude/skills/dispatch/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/android/: README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/dev/relic/android/: IntentLauncher.kt  MainActivity.kt  RelicViewModel.kt  RetroArchLauncher.kt
apps/android/app/src/main/res/xml/: file_paths.xml
apps/desktop/: Cargo.toml  README.md
apps/desktop/packaging/linux/appimage/: AppRun  build-appimage.sh  relic-desktop.desktop
apps/desktop/packaging/linux/flatpak/: org.relic.Relic.metainfo.xml  org.relic.Relic.yml
apps/desktop/packaging/macos/: Info.plist  README.md  build-dmg.sh
apps/desktop/packaging/windows/: README.md  main.wxs
apps/desktop/src/: emulator_detect.rs  main.rs
apps/desktop/ui/: app.slint
core/: Cargo.toml
core/data/intents/: aethersx2.toml  azahar.toml  dolphin.toml  dolphin_mmjr.toml  duckstation.toml  melonds.toml  mupen64plus_fz.toml  ppsspp.toml  ppsspp_gold.toml  ppsspp_legacy.toml  retroarch.toml  retroarch_aarch64.toml  yabasanshiro2.toml
core/data/systems/: arcade.toml  atari2600.toml  dreamcast.toml  gamecube.toml  gamegear.toml  gb.toml  gba.toml  mastersystem.toml  megadrive.toml  n3ds.toml  n64.toml  nds.toml  nes.toml  pcengine.toml  ps2.toml  psp.toml  psx.toml  saturn.toml  snes.toml  wii.toml
core/src/: error.rs  lib.rs
core/src/api/: mod.rs
core/src/collections/: mod.rs
core/src/db/: mod.rs  module_migrations.rs
core/src/db/migrations/: 0001_init.sql  0002_media_source_path.sql
core/src/events/: mod.rs
core/src/intents/: mod.rs
core/src/launch/: mod.rs  template.rs
core/src/media/: mod.rs
core/src/metadata/: dat.rs  gamelist.rs  mod.rs
core/src/scan/: archive.rs  hash.rs  mod.rs
core/src/stats/: mod.rs
core/src/systems/: mod.rs
docs/: android-intents.md  android-standalone-emulators.md  media-conventions.md  retroachievements-design.md  theme-format.md
docs/adr/: 0000-template.md  0001-core-language.md  0002-desktop-ui-stack.md
ffi/capi/: Cargo.toml
ffi/capi/src/: lib.rs
ffi/uniffi/: Cargo.toml  README.md  generate-kotlin.ps1
ffi/uniffi/src/: lib.rs
fixtures/: README.md
fixtures/mini/nes/: Contra (USA).nes
fixtures/mini/snes/: gamelist.xml
modules/retroachievements/: Cargo.toml  build.rs
modules/retroachievements/migrations/: 0001_ra_tables.sql  0002_ra_no_match_cache.sql
modules/retroachievements/native/rcheevos/: VENDORED.md
modules/retroachievements/src/: client.rs  hash.rs  lib.rs  no_match_cache.rs  store.rs
modules/scraper/: Cargo.toml
modules/scraper/migrations/: 0001_scraper_matches.sql
modules/scraper/src/: lib.rs  pipeline.rs  provider.rs  store.rs
modules/scraper/src/providers/: mod.rs  screenscraper.rs
modules/sync/: Cargo.toml
modules/sync/src/: lib.rs
modules/themes/: Cargo.toml
modules/themes/src/: lib.rs  model.rs  resolve.rs  validate.rs
themes/: README.md
themes/default/: theme.toml
tools/android/: build-apk.ps1
tools/bench/: README.md  run.ps1
tools/e2e/: README.md  run.ps1
tools/fixgen/: README.md  generate.ps1
tools/relic-cli/: Cargo.toml
tools/relic-cli/src/: main.rs
tools/size-check/: README.md  run.ps1
