[package]
name = "relic-core"
description = "Relic's headless engine: library indexing, metadata, and launch model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
thiserror.workspace = true
log.workspace = true
quick-xml = "0.37"
crc32fast = "1"
md-5 = "0.10"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[features]
# The default build is pure T0 (offline). Online capability flags are added by
# the modules/ crates, never here — core must not know about the network.
default = []

[dev-dependencies]
tempfile = "3"
