[package]
name = "relic-desktop"
description = "Relic's desktop shell (stub pending the Phase 0 UI spike, ADR-002)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "relic-desktop"
path = "src/main.rs"

[dependencies]
relic-core.workspace = true
