[package]
name = "relic-desktop"
description = "Relic's desktop shell (stub pending Phase 2 implementation; UI stack is Slint per ADR-002)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "relic-desktop"
path = "src/main.rs"

[dependencies]
relic-core.workspace = true
slint = "1.17"
rfd = "0.15"

[build-dependencies]
slint-build = "1.17"
