[package]
name = "relic-desktop"
description = "Relic's desktop shell (Slint UI per ADR-002)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "relic-desktop"
path = "src/main.rs"

[dependencies]
relic-core.workspace = true
relic-themes = { path = "../../modules/themes" }
relic-scraper = { path = "../../modules/scraper" }
rusqlite.workspace = true
slint = "1.17"
rfd = "0.15"
dirs = "5"
gilrs = "0.11"

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
tempfile = "3"
