[package]
name = "relic-ffi"
description = "UniFFI bindings over relic-core for the Kotlin (Android) and Swift (iOS) shells"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[dependencies]
relic-core.workspace = true
thiserror.workspace = true
uniffi = { version = "0.29" }

[features]
cli = ["uniffi/cli"]

[dev-dependencies]
tempfile = "3"
