[package]
name = "relic-scraper"
description = "Relic's opt-in metadata/media scraper module (T1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
relic-core.workspace = true
rusqlite.workspace = true
# Network deps are optional and only pulled in when a concrete provider
# feature is enabled. A default build of relic-scraper stays network-free
# (PLAN.md T1 / AGENTS.md hard rule #1: zero telemetry by default).
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[features]
# ScreenScraper provider (PLAN.md §7.1). Off by default — enabling pulls in
# reqwest + serde, which the rest of relic-scraper never touches.
screenscraper = ["dep:reqwest", "dep:serde", "dep:serde_json"]
