[package]
name = "relic-themes"
description = "Relic's theme engine: design-token and (later) layout theming"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
relic-core.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
